--- a/dashboard/public/css/sb-profile.css
+++ b/dashboard/public/css/sb-profile.css
@@ -56,9 +56,9 @@ body{
     font-size: 15px;
     font-weight: 600;
 }
-.profile-head .nav-tabs{
+/* .profile-head .nav-tabs{
     margin-bottom:5%;
-}
+} */
 .profile-head .nav-tabs .nav-link{
     font-weight:600;
     border: none;
